<resources>
    <string name="app_name">NebbStats</string>
    <string name="title_stats">All</string>
    <string name="title_pilot">Pilot</string>
    <string name="title_crew">Crew</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="player">Player</string>
    <string name="approved">Approved</string>
    <string name="rejected">Rejected\n</string>
    <string name="spam">Spam\n</string>
    <string name="pending">Pending</string>
    <string name="total">Total\n</string>
    <string name="submission_category">S-class submission category</string>
    <string name="player_list">Player list</string>
    <string name="s_class_submission">S Class Submissions</string>
    <string name="view_on_extended_nebb">View on Extended Nebb by Kintsugi</string>
    <string name="rank_on_extended">Rank on Extended Nebb</string>
</resources>