<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".screen.stats.StatsFragment">

    <data>

        <variable
            name="viewModel"
            type="net.namada.nebbstats.screen.stats.StatsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/submission_category"
            app:layout_constraintEnd_toStartOf="@id/total_count"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/total_count"
            android:layout_width="@dimen/count_height"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/total"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/pilot"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/pilot"
            android:layout_width="@dimen/count_height"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/title_pilot"
            app:layout_constraintEnd_toStartOf="@id/crew"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/crew"
            android:layout_width="@dimen/count_height"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/title_crew"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />




        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintBottom_toTopOf="@id/bottom_view"
            tools:listitem="@layout/classified_submission_item" />

        <View
            android:id="@+id/bottom_view"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>